--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,9 @@
 {
   "presets": [
+    "@babel/preset-react",
     "@babel/preset-env"
   ],
-  "plugins": []
+  "plugins": [
+    "@babel/plugin-syntax-dynamic-import"
+  ]
 }
