--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "webpack/react 配置练习项目",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --progress --colors",
-    "start": "webpack-dev-server webpack.dev.js --colors",
+    "build": "webpack --config webpack.prod.js --progress --colors",
+    "start": "webpack-dev-server --config webpack.dev.js --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,9 +26,11 @@
     "@babel/preset-react": "^7.10.4",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.1",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^0.10.0",
     "postcss-loader": "^3.0.0",
     "px2rem-loader": "^0.1.9",
     "react-loader": "^2.4.7",
@@ -36,7 +38,8 @@
     "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.1.2"
   },
   "dependencies": {
     "react": "^16.13.1",
