--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "mini-css-extract-plugin": "^0.10.0",
     "postcss-loader": "^3.0.0",
     "px2rem-loader": "^0.1.9",
-    "react-loader": "^2.4.7",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
@@ -42,8 +41,11 @@
     "webpack-merge": "^5.1.2"
   },
   "dependencies": {
+    "animate.css": "^4.1.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-keep-alive": "^2.5.2",
     "react-loadable": "^5.5.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
