--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-loadable": "^5.5.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "uuid": "^8.3.0"
   }
 }
