--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "webpack --config webpack.prod.js --progress --colors",
     "start": "webpack-dev-server --config webpack.dev.js --colors",
+    "dll": "webpack --config webpack.dll.js --progress --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,15 +28,20 @@
     "@babel/preset-react": "^7.10.4",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
+    "babel-plugin-import": "^1.13.0",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.4",
     "css-loader": "^4.2.1",
     "cssnano": "^4.1.10",
+    "html-webpack-plugin": "^4.4.1",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
     "mini-css-extract-plugin": "^0.10.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-loader": "^3.0.0",
     "px2rem-loader": "^0.1.9",
     "style-loader": "^1.2.1",
+    "terser-webpack-plugin": "^4.1.0",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
@@ -44,6 +50,8 @@
   },
   "dependencies": {
     "animate.css": "^4.1.0",
+    "antd": "^4.6.2",
+    "antd-mobile": "^2.3.3",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
