--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "webpack --config webpack.prod.js --progress --colors",
     "start": "webpack-dev-server --config webpack.dev.js --colors",
     "dll": "webpack --config webpack.dll.js --progress --colors",
+    "analyzer": "webpack --config webpack.analyzer.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -40,10 +41,12 @@
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-loader": "^3.0.0",
     "px2rem-loader": "^0.1.9",
+    "speed-measure-webpack-plugin": "^1.3.3",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^4.1.0",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.1.2"
