--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "copy-webpack-plugin": "^6.0.4",
     "css-loader": "^4.2.1",
     "cssnano": "^4.1.10",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^4.4.1",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
